# terminal-calendar

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  SCHEDULE_FORMAT.md  SETUP.md  pyproject.toml  tcal-dev.sh
examples/: sample_schedule.json
src/terminal_calendar/: __init__.py  calendar_app.py  cli.py  config.py  export.py  models.py  report_generator.py  schedule_parser.py  state_manager.py  statistics.py  validator.py
tests/: __init__.py  test_cli.py  test_phase10.py  test_report_generator.py  test_schedule_parser.py  test_state_manager.py
tests/fixtures/: invalid_json.json  invalid_time.json  valid_schedule.json
